--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "rss-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,5 +13,8 @@
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
